# OBSBOT_Linux_GUI

./: .gitignore  CMakeLists.txt  OBSBOT_SDK_Features_List.md  OBSBOT_SDK_機能一覧.md  README.md  build.sh  main.cpp  run.sh
